bug 3558 - null values coming back for scores; we weren't handling it. Now, when a null value is detected for the score, we are populating with -1